--- a/service1/service1.yml
+++ b/service1/service1.yml
@@ -1,4 +1,6 @@
 example.property: "I AM IN THE DEFAULT"
+licenseService.hystrix.timeout: "2000"
+getLicensesByOrg.hystrix.coreSize: "30"
 spring.jpa.database: "POSTGRESQL"
 spring.datasource.platform:  "postgres"
 spring.jpa.show-sql: "true"
